tests/golden/defaults/openshift-nmstate/openshift-nmstate/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ''
  labels:
    name: openshift-nmstate
    openshift.io/cluster-monitoring: 'true'
  name: openshift-nmstate
